Navbar example 4/ css funniness - Collapse and collapse icon/ css funniness fix

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -67,6 +67,11 @@ div {
 	margin:5px;
 }
 
+h2 {
+	margin:3px;
+}
+
+
 #toolbar_test1 {
 		margin:5px;
 }
